--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "localforage": "^1.4.0",
     "react": "^15.6.1",
     "react-addons-update": "^15.0.1",
     "react-dom": "^15.0.1",
