--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react-dom": "^15.0.1",
     "react-redux": "^5.0.5",
     "redux": "^3.5.2",
+    "react-dnd": "^2.1.2",
+    "react-dnd-html5-backend": "^2.1.2",
     "uuid": "^2.0.1"
   }
 }
